--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,10 @@
     box-sizing: border-box;
     font-family: "Montserrat", sans-serif;
 }
+mainname{
+    color: white;
 
+}
 h1{
     font-size: 50px;
     line-height: 40px;
