--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 15px 30px;
-    background-color: #000; /* Darker background for elegance */
+    background-color: #fff; /* Darker background for elegance */
     width: 100%;
     position: fixed;
      left: 0;
