--- a/styles.css
+++ b/styles.css
@@ -151,8 +151,8 @@ header {
     transition: color 0.3s ease, transform 0.3s ease; /* Smooth hover effect */
 }
 .nav .item li a:hover {
-    color: #fff; /* Text color stays white */
-    background-color: #333; /* Darker background for contrast */
+    color: #000; /* Text color stays white */
+    background-color: #fff; /* Darker background for contrast */
     padding: 5px;
     transform: scale(1.05);
 }
